compiler/tests/fail/param_expansion/x86-64/bug_675_3.jazz
export
fn main() -> reg u64 {
    stack u64[10] a;
    a[0] = 0;
    a[0:0x11111111111111111111111111111111111111111111111111111111111111111111111111111] = a[0:0x10000000000];

    reg u64 r;
    r = a[0];

    return r;
}
